# onelog-africa-voyage-tracker

./: .dockerignore  .env  .env.example  .gitignore  .lighthouserc.json  .phpunit.result.cache  ADMIN_DASHBOARD.md  AUDIT-COMPLET-FINAL-ONELOG-AFRICA.md  AUDIT-COMPLET-ONELOG-AFRICA.md  AUDIT_COMPLET_ONELOG_AFRICA_V2.md  CAHIER_DES_CHARGES_CONSOLIDE.md  CAHIER_DES_CHARGES_MCP_TRANSPORTEURS.md  CHANGELOG-PHASE1.md  CHANGELOG-PHASE2.md  CHANGELOG.md  CHANGELOG_v1.0.0.txt  CONTRIBUTING.md  CONTRIBUTING_old.md  CONTROL_ROOM_README.md  DIAGNOSTIC_TECHNIQUE_COMPLET.md  DIRECTIVE_BLOC_PHP.md  Dockerfile  FEATURE_FLAGS.md  INTEGRATION_UI.md  KANBAN.md  NOTIFICATIONS_FALLBACK.md  NOTIFICATIONS_REALTIME.md  PHASE3-TIMELINE-COMPLETION-SUMMARY.md  PLAN_ACTION_GLOBAL.md  PLAN_ACTION_PROD_READY.md  PR-TEMPLATE-PHASE1.md  PR-TEMPLATE-PHASE2.md  PR-TEMPLATE-PHASE3-TIMELINE.md  PROJECT-GUIDELINES-CASCADE.md  QA_AFFECTATION_CHAUFFEUR.md  QA_DEMANDES_EXPLOITANT.md  QA_DEMANDE_CLIENT.md  QA_MISSIONS_CHAUFFEUR.md  QA_MVP_GLOBAL.md  RAPPORT_GLOBAL_P1.md  (+65 more)
.github/: dependabot.yml  secrets-setup.md
.husky/: pre-push
.storybook/: main.ts  preview.tsx
.windsurf/: cascade-alignment.md  issue-tracker.md  roadmap.md  sync-log.md
components/: AffectationForm.tsx  (+7 more)
project-tracker/: README.md  example.project-status.json  project-status.schema.json  pyproject.toml
project-tracker/hooks/: pre-commit  pre-commit.bat
project-tracker/scripts/: cli.py  generate-readme.py
project-tracker/templates/: changelog_template.md  contributing_template.md  readme_template.md  roadmap_template.md
(+1321 files in other folders)
